# leannldata

./: README.md  docker-compose.yml
api/: Dockerfile  main.py  pyproject.toml
manager/: Dockerfile  process_data.py  pyproject.toml
